# Signal-Generator

./: CMakeLists.txt  Doxyfile  Makefile  TODO  doxyfile  plot.gp
include/: SignalGenerator.h  SignalGenerator.hpp
pictures/: cosine.eps  gaussian.eps  sawtooth.eps  sine.eps  square.eps  triangle-sine.eps  triangle.eps
source/: SignalGenerator.cpp  sig.cpp  signalGeneratorTest.cpp
src/: MotherWaveletGenerator.cpp  SignalGenerator.cpp  pictures.dox  sig.cpp
